# toy8086

./: .gitignore  CMakeLists.txt
src/: cpu.cc  cpu.h  helper.h  main.cc  mem.h
test/: a.s  b.s  c.s
